--- a/src/app/libs/home/pages/design-page/design-page.component.html
+++ b/src/app/libs/home/pages/design-page/design-page.component.html
@@ -1,22 +1,19 @@
-<dx-popup
-  class="popup"
-  [width]="'100vw'"
-  [height]="'100vh'"
-  [showTitle]="true"
-  title="设计器"
-  [dragEnabled]="false"
-  [closeOnOutsideClick]="true"
-  [(visible)]="popupVisible"
->
-  <ws-view
-    [view]="designView"
-    *ngIf="popupVisible"
-    (onAction)="doAction($event)"
-  ></ws-view>
-</dx-popup>
+<!-- <dx-popup class="popup" [width]="'100vw'" [height]="'100vh'" [showTitle]="true" title="设计器" [dragEnabled]="false"
+  [closeOnOutsideClick]="true" [(visible)]="popupVisible">
+  <ws-view [view]="designView" *ngIf="popupVisible" (onAction)="doAction($event)"></ws-view>
+</dx-popup> -->
 
-<ws-view
-  [view]="selectedView"
-  *ngIf="selectedView"
-  (onAction)="doAction($event)"
-></ws-view>
+
+
+<div class="form">
+  <div class="dx-fieldset">
+    <div class="dx-field">
+      <div class="dx-field-label">选择元数据</div>
+      <div class="dx-field-value">
+        <dx-radio-group [displayExpr]="'title'" [items]="views" layout="horizontal" (valueChange)="changeView($event)">
+        </dx-radio-group>
+      </div>
+    </div>
+  </div>
+</div>
+<ws-view [view]="designView" *ngIf="designView" (onAction)="doAction($event)"></ws-view>
