--- a/src/app/shared/components/ws-view/ws-view.component.html
+++ b/src/app/shared/components/ws-view/ws-view.component.html
@@ -1,47 +1,39 @@
-<ws-editor
-  [view]="v"
-  [dataSource]="dataSource"
-  (onCreateSuccess)="onCreateSuccess()"
-></ws-editor>
-<dx-data-grid
-  [dataSource]="dataSource"
-  [showBorders]="true"
-  mode="multiple"
-  [selectedRowKeys]="selectedRowKeys"
-  (selectedRowKeysChange)="setSelectRowKeys($event)"
->
+<ws-editor [view]="v" (onCreateSuccess)="onCreateSuccess()"></ws-editor>
+<dx-data-grid *ngIf="v.viewType=='table'" [dataSource]="dataSource" [showBorders]="true" mode="multiple"
+  [selectedRowKeys]="selectedRowKeys" (selectedRowKeysChange)="setSelectRowKeys($event)">
   <dxo-selection [selectAllMode]="'page'" mode="multiple"></dxo-selection>
 
   <dxo-filter-row [visible]="true"></dxo-filter-row>
   <dxo-header-filter [visible]="true"></dxo-header-filter>
-  <dxo-remote-operations
-    [filtering]="true"
-    [sorting]="true"
-    [grouping]="true"
-  ></dxo-remote-operations>
-  <dxi-column
-    *ngFor="let col of columns"
-    [caption]="col.caption"
-    [calculateDisplayValue]="col.calculateDisplayValue"
-    [dataField]="col.dataField"
-  ></dxi-column>
+  <dxo-remote-operations [filtering]="true" [sorting]="true" [grouping]="true"></dxo-remote-operations>
+  <dxi-column *ngFor="let col of columns" [caption]="col.caption" [calculateDisplayValue]="col.calculateDisplayValue"
+    [dataField]="col.dataField" [dataType]="col.dataType"></dxi-column>
   <dxi-column type="buttons" [width]="110">
     <dxi-button icon="edit" [onClick]="edit"></dxi-button>
 
     <dxi-button name="delete"></dxi-button>
   </dxi-column>
   <dxi-column type="buttons">
-    <dxi-button
-      hint="video"
-      icon="video"
-      [text]="'切换'"
-      [onClick]="doAction"
-      name="change"
-    ></dxi-button>
+    <dxi-button hint="video" icon="video" [text]="'切换'" [onClick]="doAction" name="change"></dxi-button>
   </dxi-column>
-  <dxo-editing
-    mode="row"
-    [allowDeleting]="true"
-    [useIcons]="true"
-  ></dxo-editing>
+  <dxo-editing mode="row" [allowDeleting]="true" [useIcons]="true"></dxo-editing>
 </dx-data-grid>
+
+<dx-tree-list *ngIf="v.viewType=='tree-list'" id="tasks" [dataSource]="dataSource" [keyExpr]="v.keyExpr"
+  [parentIdExpr]="v.parentIdExpr" [columnAutoWidth]="true" [wordWrapEnabled]="true" [showBorders]="true"
+  [columns]="columns">
+
+  <dxo-search-panel [visible]="true" width="250"></dxo-search-panel>
+  <dxo-header-filter [visible]="true"></dxo-header-filter>
+  <!-- <dxo-selection mode="multiple"></dxo-selection> -->
+  <!-- <dxo-column-chooser [enabled]="true"></dxo-column-chooser> -->
+
+  <dxi-column *ngFor="let col of columns" [caption]="col.caption" [calculateDisplayValue]="col.calculateDisplayValue"
+    [dataField]="col.dataField" [dataType]="col.dataType"></dxi-column>
+  <dxi-column type="buttons" [width]="110">
+    <dxi-button icon="add" [onClick]="add"></dxi-button>
+    <dxi-button icon="edit" [onClick]="edit"></dxi-button>
+
+    <dxi-button name="delete"></dxi-button>
+  </dxi-column>
+</dx-tree-list>
