--- a/src/app/shared/components/ws-view/ws-view.component.html
+++ b/src/app/shared/components/ws-view/ws-view.component.html
@@ -1,39 +1,149 @@
-<ws-editor [view]="v" (onCreateSuccess)="onCreateSuccess()"></ws-editor>
-<dx-data-grid *ngIf="v.viewType=='table'" [dataSource]="dataSource" [showBorders]="true" mode="multiple"
-  [selectedRowKeys]="selectedRowKeys" (selectedRowKeysChange)="setSelectRowKeys($event)">
-  <dxo-selection [selectAllMode]="'page'" mode="multiple"></dxo-selection>
+<!-- <div *dynamicComponent="template; context: bindings"></div> -->
 
-  <dxo-filter-row [visible]="true"></dxo-filter-row>
-  <dxo-header-filter [visible]="true"></dxo-header-filter>
-  <dxo-remote-operations [filtering]="true" [sorting]="true" [grouping]="true"></dxo-remote-operations>
-  <dxi-column *ngFor="let col of columns" [caption]="col.caption" [calculateDisplayValue]="col.calculateDisplayValue"
-    [dataField]="col.dataField" [dataType]="col.dataType"></dxi-column>
-  <dxi-column type="buttons" [width]="110">
-    <dxi-button icon="edit" [onClick]="edit"></dxi-button>
+<ws-editor
+  [view]="v"
+  (onCreateSuccess)="onCreateSuccess()"
+  [(mode)]="mode"
+></ws-editor>
 
-    <dxi-button name="delete"></dxi-button>
-  </dxi-column>
-  <dxi-column type="buttons">
-    <dxi-button hint="video" icon="video" [text]="'切换'" [onClick]="doAction" name="change"></dxi-button>
-  </dxi-column>
-  <dxo-editing mode="row" [allowDeleting]="true" [useIcons]="true"></dxo-editing>
-</dx-data-grid>
+<!-- 查询工具条 -->
+<dx-toolbar *ngIf="item">
+  <dxi-item
+    [dataField]="item.dataField"
+    [editorType]="item.editorType"
+    [label]="item.label"
+    [colCount]="1"
+    [editorOptions]="item.editorOptions"
+  >
+    <ng-container *ngIf="item">
+      <dx-drop-down-box
+        [(value)]="_formData_[item.dataField]"
+        [placeholder]="item.editorOptions.dxTreeView.placeholder"
+        [showClearButton]="true"
+        [displayExpr]="item.editorOptions.dxTreeView.displayExpr"
+        [dataSource]="item.editorOptions.dxTreeView.dataSource"
+        (onValueChanged)="addPresetFilter($event)"
+      >
+        <dx-tree-view
+          [dataSource]="item.editorOptions.dxTreeView.dataSource"
+          dataStructure="plain"
+          [keyExpr]="item.editorOptions.dxTreeView.keyExpr"
+          showCheckBoxesMode="normal"
+          [parentIdExpr]="item.editorOptions.dxTreeView.parentIdExpr"
+          [selectionMode]="item.editorOptions.dxTreeView.selectionMode"
+          [displayExpr]="item.editorOptions.dxTreeView.displayExpr"
+          [selectByClick]="true"
+          (onContentReady)="
+            $event.component.selectItem(_formData_[item.dataField])
+          "
+          (onItemSelectionChanged)="treeView_itemSelectionChanged($event, item)"
+        >
+        </dx-tree-view>
+      </dx-drop-down-box>
+    </ng-container>
+  </dxi-item>
+  <dxi-item text="Add" locateInMenu="always"> </dxi-item>
+  <dxi-item text="Change" locateInMenu="always"> </dxi-item>
+  <dxi-item text="Products" location="center"> </dxi-item>
+</dx-toolbar>
 
-<dx-tree-list *ngIf="v.viewType=='tree-list'" id="tasks" [dataSource]="dataSource" [keyExpr]="v.keyExpr"
-  [parentIdExpr]="v.parentIdExpr" [columnAutoWidth]="true" [wordWrapEnabled]="true" [showBorders]="true"
-  [columns]="columns">
+<div style="text-align: right;margin-bottom:20px" [class.hide]="mode != 'List'">
+  <dx-button
+    text="新建"
+    (onClick)="openNewModal()"
+    [width]="40"
+    style="margin-right:20px"
+  ></dx-button>
+  <!-- <dx-button text="编辑" (onClick)="openUpdateModel($event)" [width]="40" style="margin-right:20px" -->
+  <!-- [disabled]="selectedRows.length != 1"></dx-button> -->
+  <!-- <dx-button text="详情" (onClick)="openNewModal($event)" [width]="40" style="margin-right:20px"></dx-button> -->
+  <dx-button
+    text="删除"
+    (onClick)="deleteSelected($event)"
+    [width]="40"
+    type="danger"
+    [stylingMode]="'outlined'"
+    style="margin-right:20px"
+  ></dx-button>
+</div>
+<div [class.hide]="mode != 'List'">
+  <dx-data-grid
+    *ngIf="v.viewType == 'table'"
+    [dataSource]="dataSource"
+    [showBorders]="true"
+    mode="multiple"
+    [selectedRowKeys]="selectedRowKeys"
+    (selectedRowKeysChange)="setSelectRowKeys($event)"
+  >
+    <dxo-selection [selectAllMode]="'page'" mode="multiple"></dxo-selection>
 
-  <dxo-search-panel [visible]="true" width="250"></dxo-search-panel>
-  <dxo-header-filter [visible]="true"></dxo-header-filter>
-  <!-- <dxo-selection mode="multiple"></dxo-selection> -->
-  <!-- <dxo-column-chooser [enabled]="true"></dxo-column-chooser> -->
+    <dxo-filter-row [visible]="true"></dxo-filter-row>
+    <dxo-header-filter [visible]="true"></dxo-header-filter>
+    <dxo-remote-operations
+      [filtering]="true"
+      [sorting]="true"
+      [grouping]="true"
+    ></dxo-remote-operations>
+    <dxi-column
+      *ngFor="let col of columns"
+      [caption]="col.caption"
+      [calculateDisplayValue]="col.calculateDisplayValue"
+      [dataField]="col.dataField"
+      [dataType]="col.dataType"
+    ></dxi-column>
+    <dxi-column type="buttons" [width]="110">
+      <dxi-button icon="edit" [onClick]="edit"></dxi-button>
 
-  <dxi-column *ngFor="let col of columns" [caption]="col.caption" [calculateDisplayValue]="col.calculateDisplayValue"
-    [dataField]="col.dataField" [dataType]="col.dataType"></dxi-column>
-  <dxi-column type="buttons" [width]="110">
-    <dxi-button icon="add" [onClick]="add"></dxi-button>
-    <dxi-button icon="edit" [onClick]="edit"></dxi-button>
+      <dxi-button name="delete"></dxi-button>
+    </dxi-column>
+    <dxi-column type="buttons">
+      <dxi-button
+        hint="video"
+        icon="video"
+        [text]="'切换'"
+        [onClick]="doAction"
+        name="change"
+      ></dxi-button>
+    </dxi-column>
+    <dxo-editing
+      mode="row"
+      [allowDeleting]="true"
+      [useIcons]="true"
+    ></dxo-editing>
+  </dx-data-grid>
 
-    <dxi-button name="delete"></dxi-button>
-  </dxi-column>
-</dx-tree-list>
+  <dx-tree-list
+    *ngIf="v.viewType == 'tree-list'"
+    [dataSource]="dataSource"
+    [keyExpr]="v.keyExpr"
+    [parentIdExpr]="v.parentIdExpr"
+    [columnAutoWidth]="true"
+    [wordWrapEnabled]="true"
+    [showBorders]="true"
+    [columns]="columns"
+    [(selectedRowKeys)]="selectedRowKeys"
+  >
+    <dxo-selection mode="multiple" [recursive]="recursiveSelectionEnabled">
+    </dxo-selection>
+    <dxo-search-panel [visible]="true" width="250"></dxo-search-panel>
+    <dxo-header-filter [visible]="true"></dxo-header-filter>
+    <dxo-filter-row [visible]="true"></dxo-filter-row>
+    <!-- <dxo-selection mode="multiple"></dxo-selection> -->
+    <!-- <dxo-column-chooser [enabled]="true"></dxo-column-chooser> -->
+    <dxo-editing [allowDeleting]="true"></dxo-editing>
+
+    <dxi-column
+      *ngFor="let col of columns"
+      [caption]="col.caption"
+      [calculateDisplayValue]="col.calculateDisplayValue"
+      [dataField]="col.dataField"
+      [dataType]="col.dataType"
+    ></dxi-column>
+    <dxi-column type="buttons" [width]="110">
+      <dxi-button icon="add" [onClick]="add"></dxi-button>
+      <dxi-button icon="edit" [onClick]="edit"></dxi-button>
+
+      <dxi-button name="delete"></dxi-button>
+    </dxi-column>
+  </dx-tree-list>
+</div>
